--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -165,10 +166,10 @@
                 <!-- Sidebar user (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="~/mugshots/@Globals.user_picture" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/mugshots/@httpContextAccessor.HttpContext.Session.GetString("UserPICTURE")" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">@Globals.logged_in_user</a>
+                        <a href="#" class="d-block">@httpContextAccessor.HttpContext.Session.GetString("UserNAME")  </a>
                     </div>
                     
                 </div>
@@ -183,7 +184,7 @@
                         <!-- Add icons to the links using the .nav-icon class
                              with font-awesome or any other icon font library -->
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/Dashboard" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     Dashboard
@@ -193,7 +194,7 @@
                              
                         </li>
 
-                        @if (Globals.user_permission == "Admin")
+                        @if (@httpContextAccessor.HttpContext.Session.GetString("UserPERMISSION") == "Admin")
                         {
                             <li class="nav-item">
                                 <a href="/VerifySignUp" class="nav-link">
