--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -12,6 +12,20 @@
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRp9Ck6fKu00mDVSeg05F26SN4k3qvD4k&callback=initMap&libraries=places&v=weekly"
+            defer></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRp9Ck6fKu00mDVSeg05F26SN4k3qvD4k&callback=initMap2&libraries=places&v=weekly"
+            defer></script>
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" type="text/css" href="~/css/mapforlocations.css" />
+    <script type="module" src="~/js/mapforlocations.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="~/css/requestmaps.css" />
+    <script type="module" src="~/js/requestmaps.js"></script>
 </head>
 <body class="hold-transition sidebar-mini">
     <!-- Site wrapper -->
