Working on DriverOffers

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -234,11 +234,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/RideOffers" class="nav-link">
+                            <a href="#" class="nav-link">
 
                                 <i class="nav-icon fas fa-arrow-right-long"></i>
                                 <p>
-                                    Accepted Ride Offers
+                                    My Ride Bookings
 
                                 </p>
                             </a>
