--- a/Pages/RideOffers.cshtml
+++ b/Pages/RideOffers.cshtml
@@ -2,3 +2,72 @@
 @model p2pRideshare.Pages.RideOffersModel
 @{
 }
+
+<div class="row">
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1>Available Drivers</h1>
+                    </div>
+                    <div class="col-sm-6 d-none d-sm-block">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item active">Ride Offers</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="content pb-3">
+            <div class="container-fluid">
+                <div class="row">
+
+                    @foreach (var item in Model.MatchedOffersList)
+                    {
+                        <div class="col-sm-4">
+
+                            <div class="our-team">
+                                <div class="picture">
+                                    <img class="img-fluid" src="~/mugshots/@item.profilePic">
+                                </div>
+                                <div class="team-content">
+                                    
+                                    <p>@item.fullName - @item.idNo</p>
+                                    
+                                    <p>Pickup: @item.pickupLocation</p>
+                                    <p>Destination: @item.finalDestination</p>
+
+                                    <p>Date: @item.pickupDate | Time: @item.pickupTime</p>
+                                    <p>Vehicle: @item.vehicleMake | Color: @item.vehicleColor | RegNo: @item.vehicleRegNo</p>
+
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <img src="/mugshots/@item.picDriversLicense" alt="DriversLicensePic" class="img-thumbnail" style="width:40%">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <img src="/mugshots/@item.picZinaraReg" alt="ZinaraRegPic" class="img-thumbnail" style="width:40%">
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                                <ul class="social">
+                                    <li><a href="/DriverBookings?matchId=@item.matchId&action=Accept" class="fa fa-facebook" aria-hidden="true">ACCEPT</a></li>
+                                    <li><a href="/DriverBookings?matchId=@item.matchId&action=Reject" class="fa fa-twitter" aria-hidden="true">REJECT</a></li>
+
+                                </ul>
+                            </div>
+
+                        </div>
+                    }
+
+
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
