Driver Passenger Confirmations

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -234,11 +234,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/DriverBookings" class="nav-link">
 
                                 <i class="nav-icon fas fa-arrow-right-long"></i>
                                 <p>
-                                    My Ride Bookings
+                                    Accepted Drivers
 
                                 </p>
                             </a>
@@ -275,7 +275,7 @@
 
                                 <i class="nav-icon fas fa-arrow-right-long"></i>
                                 <p>
-                                    My Passenger Bookings
+                                    Accepted Passengers
 
                                 </p>
                             </a>
