--- a/Pages/RideOffers.cshtml
+++ b/Pages/RideOffers.cshtml
@@ -3,29 +3,54 @@
 @{
 }
 
-<div class="row">
+
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <section class="content-header">
             <div class="container-fluid">
+
+
+                @if (Model.errorMessage.Length > 0)
+                {
+                    <div class="d-flex justify-content-between w-100 flex-wrap">
+                        <div class="mb-3 mb-lg-0">
+                            <div class="alert alert-danger" role="alert">
+                                <strong>@Model.errorMessage</strong>
+                            </div>
+                        </div>
+                    </div>
+                }
+
+                @if (Model.successMessage.Length > 0)
+                {
+                    <div class="d-flex justify-content-between w-100 flex-wrap">
+                        <div class="mb-3 mb-lg-0">
+                            <div class="alert alert-success" role="alert">
+                                <strong>@Model.successMessage</strong>
+                            </div>
+                        </div>
+                    </div>
+                }
+
+
+
                 <div class="row">
+                    
                     <div class="col-sm-6">
                         <h1>Available Drivers</h1>
                     </div>
-                    <div class="col-sm-6 d-none d-sm-block">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item active">Ride Offers</li>
-                        </ol>
-                    </div>
+                    
                 </div>
+                
             </div>
         </section>
 
         <section class="content pb-3">
             <div class="container-fluid">
                 <div class="row">
-
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm-4"></div>
                     @foreach (var item in Model.MatchedOffersList)
                     {
                         <div class="col-sm-4">
@@ -70,4 +95,3 @@
             </div>
         </section>
     </div>
-</div>
