--- a/Pages/DriverBookings.cshtml
+++ b/Pages/DriverBookings.cshtml
@@ -3,21 +3,17 @@
 @{
 }
 
-<div class="row">
+
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
+        
         <section class="content-header">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
                         <h1>My Driver Bookings</h1>
                     </div>
-                    <div class="col-sm-6 d-none d-sm-block">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item active">Driver Bookings</li>
-                        </ol>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -25,7 +21,9 @@
         <section class="content pb-3">
             <div class="container-fluid">
                 <div class="row">
-
+                    <div class="col-sm-4"></div>
+                     <div class="col-sm-4"></div>
+                    <div class="col-sm-4"></div>
                     @foreach (var item in Model.MatchedOffersList)
                     {
                         <div class="col-sm-4">
@@ -105,8 +103,9 @@
 
                                     @if (item.passengerStatus == "Accepted" && item.driverStatus == "Accepted")
                                     {
-                                        <li><a href="https://wa.me/263@item.phone" class="fa fa-facebook" aria-hidden="true">Whats App</a></li>
-                                        <li><a href="" class="fa fa-twitter" aria-hidden="true">CALL</a></li>
+                                    string appLink = "https://wa.me/263" + item.phone;
+                                    <li><a href="@appLink" class="fa fa-facebook" aria-hidden="true">Send Whats App</a></li>
+                                        
 
                                     }
                                     else
@@ -126,4 +125,3 @@
             </div>
         </section>
     </div>
-</div>
