--- a/Pages/PassengerBookings.cshtml
+++ b/Pages/PassengerBookings.cshtml
@@ -2,7 +2,7 @@
 @model p2pRideshare.Pages.PassengerBookingsModel
 @{
 }
-<div class="row">
+
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <section class="content-header">
@@ -11,12 +11,7 @@
                     <div class="col-sm-6">
                         <h1>My Ride Bookings</h1>
                     </div>
-                    <div class="col-sm-6 d-none d-sm-block">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item active">Ride Requests</li>
-                        </ol>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -24,7 +19,7 @@
         <section class="content pb-3">
             <div class="container-fluid">
                 <div class="row">
-
+                    
                     @foreach (var item in Model.MatchedRequestsList)
                     {
                         <div class="col-sm-4">
@@ -82,8 +77,8 @@
                                             <b>Waiting passenger confirmation</b>
                                         }
                                     </p>
-                                    
 
+                                    
 
 
                                 </div>
@@ -94,8 +89,8 @@
 
                                     @if (item.passengerStatus == "Accepted" && item.driverStatus == "Accepted")
                                     {
-                                        <li><a href="https://wa.me/263@item.phone" class="fa fa-facebook" aria-hidden="true">Whats App</a></li>
-                                        <li><a href="" class="fa fa-twitter" aria-hidden="true">CALL</a></li>
+                                    string appLink = "https://wa.me/263" + item.phone;
+                                    <li><a href="@appLink" class="fa fa-facebook" aria-hidden="true">Send Whats App</a></li>
 
                                     }
                                     else
@@ -115,4 +110,3 @@
             </div>
         </section>
     </div>
-</div>
