--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -323,10 +323,12 @@
         </aside>
     
     <!-- Main content -->
-   
+   <div class="row">
+    <div class="container-fluid">
     @RenderBody()
 
-   
+        </div>
+        </div>
 
     <footer class="main-footer">
         <div class="float-right d-none d-sm-block">
